--- a/patternvisiteur/.project
+++ b/patternvisiteur/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>visiteur</name>
+	<name>patternvisiteur</name>
 	<comment>Project visiteur created by Buildship.</comment>
 	<projects>
 	</projects>
@@ -22,7 +22,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1635944655141</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
